[gd_scene load_steps=12 format=3 uid="uid://bb46uky5tiqcy"]

[ext_resource type="Texture2D" uid="uid://emtfqko0d61k" path="res://assets/UI/timer_base.png" id="1_cmu8r"]
[ext_resource type="Script" path="res://scripts/incident_timer.gd" id="1_vxxl3"]
[ext_resource type="FontFile" uid="uid://ulku0bmfw857" path="res://assets/font/serif.otf" id="2_3bcky"]
[ext_resource type="Texture2D" uid="uid://d3gw716ek5gvt" path="res://assets/UI/timer_skull.png" id="4_xkywv"]
[ext_resource type="Texture2D" uid="uid://nl3mdjo8on" path="res://assets/UI/timer_scythe.png" id="5_l2tgv"]

[sub_resource type="LabelSettings" id="LabelSettings_ue6hs"]
line_spacing = 0.0
font = ExtResource("2_3bcky")
font_size = 72
font_color = Color(0.94902, 0.964706, 1, 1)
outline_size = 30
outline_color = Color(0.14902, 0.156863, 0.176471, 1)

[sub_resource type="Animation" id="Animation_08ckb"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skull:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(870, 1110)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftScythe:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.91986]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightScythe:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.91986]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TimerBase:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 200)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LeftScythe:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(560, 860)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RightScythe:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1060, 860)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TimerBase:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 1080)]
}

[sub_resource type="Animation" id="Animation_jrhgi"]
resource_name = "danger"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skull:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.3, 0.3),
"update": 0,
"values": [Vector2(870, 960), Vector2(870, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftScythe:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.65, 0.65),
"update": 0,
"values": [1.91986, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightScythe:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.65, 0.65),
"update": 0,
"values": [-1.91986, 0.0]
}

[sub_resource type="Animation" id="Animation_xbot5"]
resource_name = "timer_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerBase:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 200), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skull:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.025, 0.975),
"transitions": PackedFloat32Array(10, 10),
"update": 0,
"values": [Vector2(870, 1110), Vector2(870, 960)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftScythe:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(10, 10),
"update": 0,
"values": [Vector2(560, 860), Vector2(560, 660)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightScythe:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(10, 10),
"update": 0,
"values": [Vector2(1060, 860), Vector2(1060, 660)]
}

[sub_resource type="Animation" id="Animation_wm7oq"]
resource_name = "timer_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerBase:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ls0nt"]
_data = {
"RESET": SubResource("Animation_08ckb"),
"danger": SubResource("Animation_jrhgi"),
"timer_in": SubResource("Animation_xbot5"),
"timer_out": SubResource("Animation_wm7oq")
}

[node name="IncidentTimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxxl3")

[node name="TimerBase" type="TextureRect" parent="."]
z_index = 7
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cmu8r")

[node name="Label" type="Label" parent="TimerBase"]
z_index = 8
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.925
anchor_right = 0.65
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "05:00"
label_settings = SubResource("LabelSettings_ue6hs")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MainTimer" type="Timer" parent="."]
one_shot = true

[node name="TimerAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ls0nt")
}

[node name="Skull" type="TextureRect" parent="."]
visible = false
z_index = 6
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = 30.0
offset_right = 90.0
offset_bottom = 250.001
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_xkywv")

[node name="LeftScythe" type="TextureRect" parent="."]
visible = false
z_index = 5
layout_mode = 0
offset_left = 560.0
offset_top = 860.0
offset_right = 860.001
offset_bottom = 1260.0
rotation = 1.91986
pivot_offset = Vector2(116, 373)
texture = ExtResource("5_l2tgv")
expand_mode = 3
stretch_mode = 5

[node name="RightScythe" type="TextureRect" parent="."]
visible = false
z_index = 5
layout_mode = 0
offset_left = 1060.0
offset_top = 860.0
offset_right = 1360.0
offset_bottom = 1260.0
rotation = -1.91986
pivot_offset = Vector2(184, 373)
texture = ExtResource("5_l2tgv")
expand_mode = 3
stretch_mode = 5
flip_h = true

[connection signal="timeout" from="MainTimer" to="." method="_on_main_timer_timeout"]
